Fixes #239 Overlap issue of search bar and footer navbar
Remove HEAD

--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -23,6 +23,10 @@
   border-radius: 0px;
   border: none;
   box-shadow: none;
+  padding-left: 16px;
+  font-family: Arial, sans-serif;
+  position: initial;
+  padding-bottom: 2px;
 }
 
 #nav-button{
@@ -32,6 +36,7 @@
   color: #0066ff;
   box-shadow: none;
   border: none;
+  position: initial;
 }
 
 #nav-group{
